# Change Log
All notable changes to this project will be documented in this file.

## [3.1.13] - 2018-07-16
# Added
- Remove code around tester approval
# Fixed
- Fix build status cache and build status presentation for Github projects.

## [3.1.12] - 2018-06-27
# Fixed
- Fix incomplete conflict resolution suggestion.
- Fix markdown syntax errors on PR messages.

## [3.1.11] - 2018-05-30
# Fixed
- Fix unexpected NothingToDo on new build status in the case integration
  pull requests are not created
- Fix comment in case of build failure on an integration branch
- Fix reference to Jira key when ticket is not found
- Fix parsing output of ls-remote for more recent git versions

## [3.1.10] - 2018-04-17
# Added
- Retry mechanism to be more robust to 429 and 500 git host errors.
- fix build assessment of pull requests that target stabilization branches.

## [3.1.9] - 2018-03-09
# Added
- Do not create integration pull requests by default.

## [3.1.8] - 2018-01-18
# Added
- Added instance name on each log line.
- Added API request logging on git host with useful information.

## [3.1.7] - 2017-12-12
# Fixed
- Fix crash on PR where comments were deleted

## [3.1.6] - 2017-07-27
# Fixed
- Fix second feature branch merge on earlier dev branch

## [3.1.5] - 2017-06-30
# Added
- A test to determine the behavior when adding a dev + stabilization branch
# Fixed
- The reset command is now robust to amends and rebases of the feature branch

## [3.1.4] - 2017-06-22
# Added
- The user is instructed to track remote counterparts of locally created branches
- no_octopus option to disable octopus merge (do consecutive merge instead)
- robust_merge strategy to perform both (and keep the best result from) octopus and consecutive merges.

## [3.1.3] - 2017-05-22
# Fixed
- Log traceback of unknown errors
- Errors during rmtree (local clone reset) used to crash the jobs
# Added
- Bert-E can send exceptions to Sentry
- System test relative to development branch deletion