@@ -6,6 +6,8 @@ All notable changes to this project will be documented in this file.
 - Remove code around tester approval
 # Fixed
 - Fix build status cache and build status presentation for Github projects.
+- Fix evaluation of approvals on Github in case a reviewer changed his/her
+  mind and removed his/her stamp.
 
 ## [3.1.12] - 2018-06-27
 # Fixed
